# sensor-board

./: -  .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: nrf52833dk_nrf52833.overlay  sensor_board.overlay
include/: app_diag.h  ble_adv.h  debug.h  dip_switch.h  filter_winsor.h  gpio_if.h  lsm6dso.h  ntc.h  sensors.h  sleep_if.h  ssc_pressure.h  xgzp6847d.h  xgzp6897d.h
src/: app_diag.c  ble_adv.c  debug.c  dip_switch.c  dip_switch.h  filter_winsor.c  gpio_if.c  lsm6dso.c  ltc3337.c  ltc3337.h  main.c  ntc.c  sensors.c  sleep_if.c  ssc_pressure.c  uart_echo.c  xgzp6847d.c  xgzp6897d.c
